# dephell_shells

./: .travis.yml  README.md  appveyor.yml  pyproject.toml
dephell_shells/: _base.py  _manager.py
tests/: test_shells.py
