[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "dephell_shells"
version = "0.1.0"
authors = ["orsinium"]
description = "activate virtual environment for current shell"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5"
attrs = "*"
pexpect = "*"
shellingham = "*"
